[FE] feat: NextAuth JWT 커스텀 처리 추가

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "jotai": "^2.15.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-auth": "5.0.0-beta.29",
@@ -63,6 +64,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
