--- a/backend/package.json
+++ b/backend/package.json
@@ -35,8 +35,10 @@
     "class-validator": "^0.14.2",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "prisma-class-generator": "^0.2.11",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "slug": "^11.0.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
@@ -49,6 +51,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
+    "@types/slug": "^5.0.9",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
