[FE] feat: OpenAPI 클라이언트 자동 생성으로 마이그레이션
- @hey-api/openapi-ts를 통한 타입 안전 클라이언트 자동 생성
- openapi-runtime.ts에서 인증 쿠키 및 baseUrl 설정
- 백엔드 OpenAPI 스펙에서 클라이언트 코드 자동 생성
- 기존 api-test 페이지 및 useApi 훅 삭제

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start"
+    "start": "next start",
+    "openapi-ts": "openapi-ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -64,6 +65,8 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@hey-api/client-next": "^0.5.1",
+    "@hey-api/openapi-ts": "^0.85.1",
     "@tailwindcss/postcss": "^4",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
