--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.952.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -33,6 +34,7 @@
     "@prisma/client": "^6.16.3",
     "@types/passport-local": "^1.0.38",
     "class-validator": "^0.14.2",
+    "multer": "^2.0.2",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "prisma-class-generator": "^0.2.11",
@@ -49,6 +51,7 @@
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/slug": "^5.0.9",
