[FE] feat: 강의 수정 기능 추가
- 강의 수정 다이얼로그 및 API 연동 구현
- CKEditor 컴포넌트 추가
- 커리큘럼 페이지 UI 개선

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
+    "@ckeditor/ckeditor5-build-classic": "^44.3.0",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.3",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -40,6 +41,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.2",
     "bcryptjs": "^3.0.2",
+    "ckeditor5-react^9.5.0": "link:@ckeditor/ckeditor5-react^9.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -56,6 +58,7 @@
     "react": "19.1.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.64.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
